--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div class="container mt-5">
+        <div class="container">
             <div class="row row-cols-1 row-cols-md-2 g-4 text-center">
                 <div class="col">
-                    <div class="card" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
+                    <div id="tarjeta" class="card" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
                         <img src="assest/img/imagen_mecanico-removebg-preview.png" class="card-img-top" alt="mecanico">
                         <div class="card-body">
                             <h5 class="card-title">Servicio</h5>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
+                    <div id="tarjeta" class="card" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
                         <img src="assest/img/imagen_mecanico-removebg-preview.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Calidad</h5>
@@ -102,14 +102,17 @@
                     </div>
                 </div>
             </div>
-            <div class="card mb-3 mt-4 text-center " data-aos="fade-up" data-aos-anchor-placement="top-bottom"
-                id="lastpic">
-                <img src="assest/img/1805-09.jpg" class="card-img-top rounded" alt="...">
-                <div class="card-body ">
-                    <h5 class="card-title">EQUIPAMIENTO DISPONIBLE</h5>
-                    <p class="card-text">EQUIPAMIENTO DISPONIBLE: Tornos mecánicos, tornos automáticos, torno CNC,
-                        limadoras, fresadoras horizontales, rectificadora plana, rectificadora cilíndrica, cepilladora,
-                        taladros sobremesa, taladro radial, taladros roscadores y electroerosión..</p>
+            <div id="tarjeta" class="card mt-5" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
+                <div class="card mb-3 mt-4 text-center" style="border: 0;" data-aos="fade-up" data-aos-anchor-placement="top-bottom"
+                    id="lastpic">
+                    <img src="assest/img/1805-09.jpg" class="card-img-top rounded" alt="...">
+                    <div class="card-body ">
+                        <h5 class="card-title">EQUIPAMIENTO DISPONIBLE</h5>
+                        <p class="card-text">EQUIPAMIENTO DISPONIBLE: Tornos mecánicos, tornos automáticos, torno CNC,
+                            limadoras, fresadoras horizontales, rectificadora plana, rectificadora cilíndrica,
+                            cepilladora,
+                            taladros sobremesa, taladro radial, taladros roscadores y electroerosión..</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -122,18 +125,17 @@
                     de calidad de los procesos productivos y administrativos de la compañía.</p>
             </div>
         </section>
-
     </main>
-    <footer>
+    <footer class="mt-3">
         <div class="col-12 col-lg-6 align-self-center">
-                <div class="col-12  text-center  ">
-                    <h3>Redes Sociales</h3>
-                    <img src="assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                    <img src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
-                    <img src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
-                        |
-                        2022.</p>
+            <div class="col-12  text-center  ">
+                <h3>Redes Sociales</h3>
+                <img class="imgred-facebook" src="assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                <img class="imgred-instagram" src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
+                <img class="imgred-gmail" src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                    |
+                    2022.</p>
             </div>
         </div>
         <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
