--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -76,7 +76,7 @@
         </div>
 
     </main>
-    <footer>
+    <footer class="mt-3">
         <div class="col-12 col-lg-6 align-self-center">
 
             <div class="col-12  text-center  ">
