--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -86,7 +86,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="mt-3">
         <div class="col-12 col-lg-6 align-self-center">
 
             <div class="col-12  text-center  ">
