--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -46,7 +46,7 @@
     </header>
     <main>
         <div class="container text-center">
-            <h2 class="fs-2 text-center">Servicios que ofrecemos:</h2>
+            <h2 class="fs-2 text-center mt-4">Servicios que ofrecemos:</h2>
             <div id="contenedor--service">
                 <div id="services" data-aos="flip-left" data-aos-duration="1000">
                     <div>
@@ -95,7 +95,7 @@
         </div>
 
     </main>
-    <footer>
+    <footer class="mt-3">
         <div class="col-12 col-lg-6 align-self-center">
             <div class="col-12  text-center  ">
                 <h3>Redes Sociales</h3>
